# qoi-images

./: CMakeLists.txt  README.md
.github/workflows/: build-test.yml
cmake/: doctest.cmake
include/qoi/decoder/: decoder.h
include/qoi/encoder/: encoder.h
src/: CMakeLists.txt  decoder.cpp  encoder.cpp
src/decoder/: CMakeLists.txt  decoder.cpp
src/encoder/: CMakeLists.txt  encoder.cpp
src/include/qoi/: core.h  decoder.h  encoder.h  qoi.h  types.h
test/: CMakeLists.txt  test_decoder.cpp  test_encoder.cpp  test_integration.cpp
